2008-10-01  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripItem.cs: Make Font, BackColor, and ForeColor be
	ambient properties.  (Get their value from their parents if
	values haven't been set.)

2008-10-01  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripSystemRenderer.cs: Call overridden methods' bases
	after our logic, so users can do painting by handling the events.
	Currently, we draw over any user painting.

2008-10-01  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripProfessionalRenderer.cs: Call overridden methods' bases
	after our logic, so users can do painting by handling the events.
	Currently, we draw over any user painting.

2008-09-30  Everaldo Canuto  <ecanuto@novell.com>

	* MenuAPI.cs: Prevent NRE when deactivate menu. Fixes #413636.

2008-09-30  Jonathan Pobst  <monkey@jpobst.com>

	* TreeNode.cs, TreeView.cs: Move logic that determines the node
	image to draw to TreeNode.  Give Index/Keys put on the node
	precedence over the global one for the TreeView.

2008-09-30  Jonathan Pobst  <monkey@jpobst.com>

	* TreeNode.cs: Setting ImageIndex or ImageKey should reset the other.

2008-09-29  Mario Carrion <mcarrion@novell.com>

	* ListBox.cs: Index fixed.

2008-09-29  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* TabControl.cs: When expanding the tab -because it's selected now-,
	using Right alignment, instead of adding some selected delta value to
	the X origin, substract it, so it gets a location adjacent to the panel, 
	instead of be more separated.
	Fixes #409170.

2008-09-29  Jonathan Pobst  <monkey@jpobst.com>

	* MessageBox.cs: Use SystemIcons for graphics instead of keeping our
	own copies of them.

2008-09-29  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* X11Dnd.cs: source and related fields should be set to IntPtr.Zero,
	as well as the other static fields, to avoid using their previous
	values my mistake when handling the dnd events. This should avoid
	handling any status event after the drop has been finalized/cancelled.
